<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddActivity">

    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/add_form.height"
        android:background="@drawable/border"
        android:layout_margin="@dimen/add_margin"
        android:hint="@string/add_name_hint"
        android:paddingLeft="@dimen/add_padding.left"
        android:textSize="@dimen/add_text.size"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/edtPhone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/add_form.height"
        android:background="@drawable/border"
        android:layout_margin="@dimen/add_margin"
        android:hint="@string/add_phone_hint"
        android:paddingLeft="@dimen/add_padding.left"
        android:textSize="@dimen/add_text.size"
        android:inputType="number"
        />

    <EditText
        android:id="@+id/edtAddress"
        android:layout_width="match_parent"
        android:layout_height="@dimen/add_form.height"
        android:background="@drawable/border"
        android:layout_margin="@dimen/add_margin"
        android:hint="@string/add_address_hint"
        android:paddingLeft="@dimen/add_padding.left"
        android:textSize="@dimen/add_text.size"
        />

    <RadioGroup
        android:id="@+id/radioGender"
        android:layout_width="match_parent"
        android:layout_height="@dimen/add_form.height"
        android:background="@drawable/border"
        android:layout_margin="@dimen/add_margin"
        android:gravity="center"
        android:paddingRight="@dimen/add_padding.left"
        android:paddingLeft="@dimen/add_padding.left"
        android:orientation="horizontal"
        android:weightSum="3"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Gender"
            android:textSize="@dimen/add_text.size"
            android:layout_weight="1"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Male"
            android:id="@+id/radioMale"
            android:checked="true"
            android:textSize="@dimen/add_text.size"
            android:layout_weight="1"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Female"
            android:id="@+id/radioFemale"
            android:textSize="@dimen/add_text.size"
            android:layout_weight="1"
            />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_margin="@dimen/add_margin">
        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_add"
            android:layout_weight="1"
            android:textSize="@dimen/add_text.size" />
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_cancel"
            android:textSize="@dimen/add_text.size"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>