<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">
    <ImageView
        android:id="@+id/ivDetailCover"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_cover.height"
        android:src="@drawable/anh"
        android:scaleType="centerCrop"/>
    <TextView
        android:id="@+id/tvDetailName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nothing"
        android:layout_alignLeft="@+id/ivDetailCover"
        android:layout_alignBottom="@+id/ivDetailCover"
        android:padding="@dimen/detail_cover.padding"
        android:textColor="@color/colorDark"
        android:textSize="@dimen/detail_text_size.large"
        android:textStyle="bold"
        android:background="#4dffffff"
        />
    <ScrollView
        android:layout_below="@id/ivDetailCover"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/info1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/detail_text.padding"
                android:weightSum="4"
                android:gravity="center">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_phone"
                        android:textSize="@dimen/detail_text_size.normal"
                        android:textStyle="bold"
                        android:padding="@dimen/detail_text.padding"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvDetailPhone"
                        android:text="Nothing"
                        android:textSize="@dimen/detail_text_size.normal"
                        android:paddingLeft="@dimen/detail_text.padding"
                        />
                </LinearLayout>
                <ImageView
                    android:id="@+id/ivDetailCall"
                    android:layout_width="@dimen/detail_ic.size"
                    android:layout_height="@dimen/detail_ic.size"
                    android:src="@drawable/ic_call"
                    android:clickable="true"
                    android:layout_weight="1"
                    />
                <ImageView
                    android:id="@+id/ivDetailText"
                    android:layout_width="@dimen/detail_ic.size"
                    android:layout_height="@dimen/detail_ic.size"
                    android:src="@drawable/ic_sms"
                    android:clickable="true"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/info2"
                android:layout_below="@id/info1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/detail_text.padding"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_address"
                    android:textSize="@dimen/detail_text_size.normal"
                    android:textStyle="bold"
                    android:padding="@dimen/detail_text.padding"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvDetailAddress"
                    android:text="Nothing"
                    android:textSize="@dimen/detail_text_size.normal"
                    android:paddingLeft="@dimen/detail_text.padding"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/info3"
                android:layout_below="@id/info2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/detail_text.padding"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_gender"
                    android:textSize="@dimen/detail_text_size.normal"
                    android:textStyle="bold"
                    android:padding="@dimen/detail_text.padding"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvDetailGender"
                    android:text="Nothing"
                    android:textSize="@dimen/detail_text_size.normal"
                    android:paddingLeft="@dimen/detail_text.padding"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/info4"
                android:layout_below="@id/info3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/detail_text.padding"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/detail_text.padding"
                    android:text="@string/detail_date"
                    android:textSize="@dimen/detail_text_size.normal"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvDetailDate"
                    android:text="Nothing"
                    android:textSize="@dimen/detail_text_size.normal"
                    android:paddingLeft="@dimen/detail_text.padding"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/info5"
                android:layout_below="@id/info4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/detail_text.padding"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_time"
                    android:textSize="@dimen/detail_text_size.normal"
                    android:textStyle="bold"
                    android:padding="@dimen/detail_text.padding"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvDetailTime"
                    android:text="Nothing"
                    android:textSize="@dimen/detail_text_size.normal"
                    android:paddingLeft="@dimen/detail_text.padding"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>